--- a/.local.docker.env
+++ b/.local.docker.env
@@ -4,15 +4,15 @@ APP_PORT=3001
 
 
 DB_TYPE=mysql
-DB_DATABASE_HOST=localhost
-DB_HOST_PORT=3307
 
-DB_DATABASE_NAME=buyingfrenzy
 
-DB_USER_ROOT=root
-DB_ROOT_PASSWORD=root
-
+DB_HOST=localhost
+DB_PORT=3307
+DB_DATABASE=buyingfrenzy
+DB_USERNAME=root
+DB_PASSWORD=root
 DB_SYNCHRONIZE=true
+
 
 
 DB_CONTAINER_NAME=local-mysql-dev
